# godot-pocketpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
demo/: CubePhysicsBodyDebug.gd  cube_physcis.tscn  icon.svg.import  project.godot
demo/addons/godot-pocketpy/: PythonScript_icon.png.import  godot-pocketpy.gdextension
demo/addons/godot-pocketpy/sbx_extension/lockstep_go/: FrameStabilizer.gd  FrameStabilizer.gd.uid
demo/addons/godot-pocketpy/sbx_extension/sliding_windows/: FrameRateWindow.gd  FrameRateWindow.gd.uid  SlidingWindow.gd  SlidingWindow.gd.uid  TimeDeltaWindow.gd  TimeDeltaWindow.gd.uid
demo/sbx_extension/: CubePhysicsBodyDebug.gd  CubePhysicsBodyDebug.gd.uid  LockstepGoClientDebug.gd  LockstepGoClientDebug.gd.uid  SpaceRenderer.gd  SpaceRenderer.gd.uid  cube_physcis.tscn  lockstep_gd.tscn  lockstep_go.tscn  space_test.tscn
demo/sbx_extension/prefabs/: h_slider.tscn
sbx_extension/: CMakeLists.txt
src/: register_types.cpp
src/lang/: Bindings.cpp  Common.cpp  Common.hpp  CubePhysics.cpp  CubePhysics.hpp  PythonScript.cpp  PythonScript.hpp
stubgen/: __main__.py  map.py
